--- a/source/scss/_blocks/button.scss
+++ b/source/scss/_blocks/button.scss
@@ -1,6 +1,6 @@
 .button-btn {
     display: block;
-    font-family: 'Open Sans';
+    font-family: $font-opensans;
     text-transform: uppercase;
     border: none;
     width: 163px;
