--- a/source/views/blocks/button.html
+++ b/source/views/blocks/button.html
@@ -1,1 +1,1 @@
-<button type="button" class="@@class button-btn button-btn-js">@@title</button>
+<button type="button" class="@@class">@@button-text</button>
