--- a/source/views/blocks/header.html
+++ b/source/views/blocks/header.html
@@ -7,6 +7,7 @@
                 <li><a href="blog.html" class="header__list-item">BLOG</a></li>
                 <li><a href="catalog.html" class="header__list-item">CATALOG</a></li>
                 <li><a href="#" class="header__list-item">ABOUT US</a></li>
+                <li><a href="animation.html" class="header__list-item">ANIMATION</a></li>
                </ul>
             <ul class="header__contact">
                 <li><img class="header__contact-img" src="./img/loupe.svg" alt="contact" width="17" height="17"></li>
