--- a/source/scss/_blocks/footer.scss
+++ b/source/scss/_blocks/footer.scss
@@ -5,342 +5,295 @@
   background: #434343;
   height: 555px;
   margin: 0 auto;
-}
+  &__aside {
+    display: flex;
+  }
 
+  &__navigation {
+    display: flex;
+    flex-direction: column;
+    margin-right: 20px;
+    margin-top: 100px;
+  }
 
-.navigation {
-  display: flex;
-  flex-direction: column;
-  margin-right: 20px;
-  margin-top: 100px;
-}
+  &__text {
+    font-family: $font-opensans;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    color: #AAAAAA;
+    margin-bottom: 23px;
+  }
+  &__text:hover {
+    opacity: 0.3;
+  }
+  &__text:active {
+    opacity: 0.2;
+  }
+  &__line {
+    width: 380px;
+    height: 1px;
+    background: #666666;
+  }
+  &__info {
+    font-family: $font-opensans;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    margin-top: 28px;
+    color: #FFFFFF;
+  }
+  &__info-item {
+    padding-bottom: 15px;
+  }
+  &__info-item:hover {
+    opacity: 0.3;
+  }
+  &__info-item:active {
+    opacity: 0.2;
+  }
+  &__customer {
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+  }
+  &__customer-text {
+    font-family: $font-opensans;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    color: #AAAAAA;
+    margin-bottom: 23px;
+  }
 
-.navigation__text {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 22px;
-  color: #AAAAAA;
-  margin-bottom: 23px;
-}
+  &__customer-line {
+    width: 380px;
+    height: 1px;
+    background: #666666;
+    margin-right: 20px;
+  }
 
-.navigation__text:hover {
-  opacity: 0.3;
-}
+  &__customer-it {
+    font-family: $font-opensans;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    margin-top: 28px;
+    color: #FFFFFF;
+  }
 
-.navigation__text:active {
-  opacity: 0.2;
-}
+  &__customer-item {
+    padding-bottom: 15px;
+  }
+  &__customer-item:hover {
+    opacity: 0.3;
+  }
+  &__customer-item:active  {
+    opacity: 0.2;
+  }
+  &__customer-text:hover {
+    opacity: 0.3;
+  }
+  &__customer-text:active {
+    opacity: 0.2;
+  }
+  &__connect {
+    margin-right: 20px;
+    margin-top: 100px;
+  }
+  &__connect-wrap {
+    display: flex;
+    flex-direction: column;
+  }
+  &__connect-text {
+    font-family: $font-opensans;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    color: #AAAAAA;
+    margin-bottom: 23px;
+  }
+  &__connect-text:hover {
+    opacity: 0.3;
+  }
+  &__connect-text:active {
+    opacity: 0.2;
+  }
 
+  &__connect-line {
+    width: 380px;
+    height: 1px;
+    background: #666666;
+    margin-bottom: 25px;  
+  }
 
-.navigation__line {
-  width: 380px;
-  height: 1px;
-  background: #666666;
-}
+  &__mail {
+    display: flex;
+    margin-bottom: 25px;    
+  }
 
-.footer__info {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 22px;
-  margin-top: 28px;
-  color: #FFFFFF;
-}
+  &__input {
+    font-family: $font-opensans;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    display: flex;
+    align-items: center;
+    padding: 6px 18px 7px 15px;
+    width: 299px;
+    background: #666666;
+    border-right: none;
+  }
+  &__input::-webkit-input-placeholder {
+    color: #EBEBEB; 
+  }
+  &__links {
+    display: flex;
+  }
 
-.footer__info-item {
-  padding-bottom: 15px;
-}
-
-.footer__info-item:hover {
-  opacity: 0.3;
-}
-
-.footer__info-item:active {
-  opacity: 0.2;
-}
-
-
-.customer {
-  display: flex;
-  flex-direction: column;
-  margin-top: 100px;
-}
-
-.customer__line {
-  width: 380px;
-  height: 1px;
-  background: #666666;
-  margin-right: 20px;
-}
-
-.footer__customer {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 22px;
-  margin-top: 28px;
-  color: #FFFFFF;
-}
-
-.footer__aside {
-  display: flex;
-}
-
-.footer__customer-item {
-  padding-bottom: 15px;
-}
-
-.footer__customer-item:hover {
-  opacity: 0.3;
-}
-
-.footer__customer-item:active {
-  opacity: 0.2;
-}
-
-.customer__text {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 22px;
-  color: #AAAAAA;
-  margin-bottom: 23px;
-}
-
-.customer__text:hover {
-  opacity: 0.3;
-}
-
-.customer__text:active {
-  opacity: 0.2;
-}
-
-.connect {
-  display: flex;
-  flex-direction: column;
-}
-
-.connect__text {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 22px;
-  color: #AAAAAA;
-  margin-bottom: 23px;
-}
-
-.connect__text:hover {
-  opacity: 0.3;
-}
-
-.connect__text:active {
-  opacity: 0.2;
-}
-
-.connect__line {
-  width: 380px;
-  height: 1px;
-  background: #666666;
-  margin-bottom: 25px;
-}
-
-.connect-footer {
-  margin-right: 20px;
-  margin-top: 100px;
-}
-
-.footer__mail {
-  display: flex;
-  margin-bottom: 25px;    
-}
-
-
-.footer__input {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 22px;
-  display: flex;
-  align-items: center;
-  padding: 6px 18px 7px 15px;
-  width: 299px;
-  background: #666666;
-  border-right: none;
-}
-
-.footer__input::-webkit-input-placeholder { 
-  color: #EBEBEB; 
-}
-
-
-
-
-.footer__links {
-  display: flex;
-}
-
-.footer__img-item {
-  padding-right: 10px;
-}
-
-.footer__img-item:hover {
-  opacity: 0.3;
-}
-
-.footer__img-item:active {
-  opacity: 0.2;
-}
-
-
-.line-footer {
-  width: 1180px;
-  height: 1px;
-  background: #666666;
-  margin-bottom: 23px;
-  margin-top: 12px;
-}
-
-.footer__box {
-  display: flex;
-}
-
-.footer__button {
-  display: block;
-  font-family: 'Open Sans';
-  text-transform: uppercase;
-  border: none;
-  width: 81px;
-  height: 40px;
-  font-weight: 700;
-  color: #FFFFFF;
-  background: #000000;
-  text-align: center;
-  padding: 9px;
-  cursor: pointer;
-}
-
-.company {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: -3px;
-}
-
-.company__text {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 22px;
-  margin-right: 25px;
-  color: #FFFFFF;
-  margin-top: 4px;
-}
-
-
-.footer__info-text {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 22px;
-  display: flex;
-  align-items: center;
-  margin-right: 109px;
-  color: #FFFFFF;
-  margin-left: 150px;
-}
-
-.footer__web__text {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 22px;
-  color: #A2A2A2;
-  margin-left: 2px;
-  margin-top: 2px;
-}
-
-
-.footer__web__text:hover {
-  text-decoration: underline;
-}
-
-.footer__web__text:active {
-  text-decoration: underline;
-}
-
+  &__img-item {
+    padding-right: 10px;
+  }
+  &__img-item:hover {
+    opacity: 0.3;
+  }
+  &__img-item:active {
+    opacity: 0.2;
+  }
+  &__line-big {
+    width: 1180px;
+    height: 1px;
+    background: #666666;
+    margin-bottom: 23px;
+    margin-top: 12px;
+  }
+  &__box {
+    display: flex;
+  }
+  &__company {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: -3px;
+  }
+  &__company-text {
+    font-family: $font-opensans;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    margin-right: 25px;
+    color: #FFFFFF;
+    margin-top: 4px;
+  }
+  &__button {
+    display: block;
+    font-family: $font-opensans;
+    text-transform: uppercase;
+    border: none;
+    width: 81px;
+    height: 40px;
+    font-weight: 700;
+    color: #FFFFFF;
+    background: #000000;
+    text-align: center;
+    padding: 9px;
+    cursor: pointer;
+  }
+  &__info-text {
+    font-family: $font-opensans;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    display: flex;
+    align-items: center;
+    margin-right: 109px;
+    color: #FFFFFF;
+    margin-left: 150px; 
+  }
+  &__web-text {
+    font-family: $font-opensans;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    color: #A2A2A2;
+    margin-left: 2px;
+    margin-top: 2px;
+  }
+  &__web-text:hover {
+    text-decoration: underline;
+  }
+  &__web-text:active {
+    text-decoration: underline;
+  }
+  
 /*************************************************************************************************** РЕЙТИНГ */
-.rating-area {
-position: relative;
-overflow: hidden;
-margin: 0 0;
-margin-top: 4px;
-flex-direction: row-reverse;
-display: flex;
-align-items: center;
-margin-left: 3px;
+  &__rating-area {
+    position: relative;
+    overflow: hidden;
+    margin: 0 0;
+    margin-top: 4px;
+    flex-direction: row-reverse;
+    display: flex;
+    align-items: center;
+    margin-left: 3px;
+  }
+    &__rating-area:not(:checked) > input {
+      display: none;
+  }
+    &__rating-area:not(:checked) > label {
+      float: right;
+      cursor: pointer;
+      font-size: 17px;
+      margin-right: 7px;
+      background-image: url('/img/icon/staroff.svg');
+      background-size: cover;
+      width: 13px;
+      height: 13px;
+  }
+  &__rating-area:not(:checked) > label:before {
+    content: '';
+    position: absolute;
+    width: 13px;
+    height: 13px;
+    top: 0;
+  }
+  &__rating-area > input:checked ~ label {
+    color: #FFFFFF;
+    background-image: url('/img/icon/staron.svg');
+    width: 13px;
+    height: 13px;
+  }
+  &__rating-area:not(:checked) > label:hover,
+  &__rating-area:not(:checked) > label:hover ~ label {
+  background-image: url('/img/icon/starhover.svg');
+  background-repeat: no-repeat;
+  width: 13px;
+  height: 13px;
+  color: #FFFFFF;;
+  }
+  &__rating-area > input:checked + label:hover,
+  &__rating-area > input:checked + label:hover ~ label,
+  &__rating-area > input:checked ~ label:hover,
+  &__rating-area > input:checked ~ label:hover ~ label,
+  &__rating-area > label:hover ~ input:checked ~ label {
+  background-image: url('/img/icon/starhover.svg');
+  background-repeat: no-repeat;
+  width: 13px;
+  height: 13px;
+  }
+  &__rating-area > label:active {
+    position: relative;
+    opacity: 0.5;
+  }
 }
 
-.label-rating {
-width: 13px;
-height: 13px;
-}
-
-.rating-area:not(:checked) > input {
-display: none;
-}
-.rating-area:not(:checked) > label {
-float: right;
-cursor: pointer;
-font-size: 17px;
-margin-right: 7px;
-background-image: url('/img/icon/staroff.svg');
-background-size: cover;
-width: 13px;
-height: 13px;
-}
-.rating-area:not(:checked) > label:before {
-content: '';
-position: absolute;
-width: 13px;
-height: 13px;
-top: 0;
-}
-.rating-area > input:checked ~ label {
-color: #FFFFFF;
-background-image: url('/img/icon/staron.svg');
-width: 13px;
-height: 13px;
-}
-.rating-area:not(:checked) > label:hover,
-.rating-area:not(:checked) > label:hover ~ label {
-background-image: url('/img/icon/starhover.svg');
-background-repeat: no-repeat;
-width: 13px;
-height: 13px;
-color: #FFFFFF;;
-}
-.rating-area > input:checked + label:hover,
-.rating-area > input:checked + label:hover ~ label,
-.rating-area > input:checked ~ label:hover,
-.rating-area > input:checked ~ label:hover ~ label,
-.rating-area > label:hover ~ input:checked ~ label {
-background-image: url('/img/icon/starhover.svg');
-background-repeat: no-repeat;
-width: 13px;
-height: 13px;
-}
-.rate-area > label:active {
-position: relative;
-opacity: 0.5;
-}
 
