--- a/source/scss/_blocks/header.scss
+++ b/source/scss/_blocks/header.scss
@@ -1,86 +1,84 @@
 .header {
     display: flex;
     align-items: center;
-    margin-top: 50px;
-    margin-bottom: 40px;
+    margin-top: 16px;
+    &__list {
+        display: flex;
+        margin-right: auto;
+        font-family: $font-opensans;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 19px;
+    }
+
+    &__contact {
+        display: flex;
+        align-items: center;  
+    }
+
+    &__text {
+        font-family: $font-opensans;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 19px;
+        word-spacing: 2px;
+        margin-left: 21px;
+    }
+
+    &__text:hover {
+        opacity: 0.3; 
+    }
+
+    &__text:active {
+        opacity: 0.2;
+    }
+
+    &__list-item {
+        margin-right: 21px;
+        align-items: center;
+    }
+    &__list-item:hover {
+        opacity: 0.3;
+    }
+    &__list-item:active {
+        opacity: 0.2;
+    }
+    &__list-item:nth-child(2) {
+        margin-left: 9px;
+        align-items: center;
+    }
+    &__logo-img {
+        width: 100.08px;
+        height: 52px;  
+        margin-right: 60px;
+    }
+    
+    &__logo-img:hover {
+        opacity: 0.3;
+    }
+
+    &__logo-img:active {
+        opacity: 0.2;
+    }
+    &__contact-img {
+        margin-right: 2px;
+    }
+    &__contact-img:hover {
+        opacity: 0.3;
+    }
+    &__contact-img:active {
+        opacity: 0.2;
+    }   
 }
 
-.header__list {
-    display: flex;
-    margin-right: auto;
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 19px;
+
+
+.container__width {
+    width: 1400px;
+    left: 1918px;
 }
 
 
-.header__contact {
-    display: flex;
-    align-items: center;
-}
-
-.header__text {
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 19px;
-    word-spacing: 2px;
-}
-
-.header__text:hover {
-    opacity: 0.3;
-}
-
-.header__text:active {
-    opacity: 0.2;
-}
-
-.header__list-item {
-    margin-right: 21px;
-    align-items: center;
-}
-
-.header__list-item:hover {
-    opacity: 0.3;
-}
-
-.header__list-item:active {
-    opacity: 0.2;
-}
-
-.header__list-item:nth-child(2) {
-    margin-left: 9px;
-    align-items: center;
-}
-
-.header__logo-img {
-    width: 100.08px;
-    height: 52px;
-    margin-right: 60px;
-}
-
-.header__logo-img:hover {
-    opacity: 0.3;
-}
-
-.header__logo-img:active {
-    opacity: 0.2;
-}
-
-
-
-.header__contact-img {
-    margin-right: 24px;
-}
-
-.header__contact-img:hover {
-    opacity: 0.3;
-}
-
-.header__contact-img:active {
-    opacity: 0.2;
-}
 
