--- a/source/scss/_variables.base.scss
+++ b/source/scss/_variables.base.scss
@@ -13,3 +13,10 @@ $font-mono-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "
 $font-base-family: $font-serif-family;
 
 
+$font-montserrat: "Montserrat", sans-serif;
+$font-crimsontext: "Crimson Text";
+$font-opensans: "Open Sans", sans-serif;
+$font-roboto: "Roboto", sans-serif;
+
+
+
