--- a/source/scss/_base.scss
+++ b/source/scss/_base.scss
@@ -15,8 +15,11 @@ a {
 }
 
 .container {
-  width: 1180px;
+  max-width: 1180px;
   margin: 0 auto;
+  @media (max-width: 1180px) {
+    margin: 0 60px;
+  }
 }
 
 li {
