--- a/source/views/blocks/header.html
+++ b/source/views/blocks/header.html
@@ -9,7 +9,9 @@
                 <li><a href="#" class="header__list-item">ABOUT US</a></li>
                 <li><a href="animation.html" class="header__list-item">ANIMATION</a></li>
                 <li><a href="svg.html" class="header__list-item">SVG</a></li>
+                <li><a href="" class="header__list-item">GRID</a></li>
                </ul>
+               <div class="menu">MENU</div>
             <ul class="header__contact">
                 <li><img class="header__contact-img" src="./img/loupe.svg" alt="contact" width="17" height="17"></li>
                 <li><a href="contactus.html" class="header__text">CONTACT US</a></li>
