--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -25,7 +25,6 @@
 @import "_blocks/help";
 @import "_blocks/svg";
 
-// ТУТ БЫЛ КОМЕНТ
 
 /*
   Ниже пример подключения других блоков
@@ -45,6 +44,9 @@
 */
 
 // 1 СТРАНИЦА
+.container-banner {
+  background: #EEE4DB;
+}
 
 .banner {
   margin-top: 40px;
@@ -52,8 +54,10 @@
   width: 1180px;
   height: 372px;
   position: relative;
-  background: #EEE4DB;
   margin-top: 129px;
+  @media (max-width:768px) {
+    margin-top: 35px;
+}
 
   &__wr {
     display: flex;
@@ -66,6 +70,8 @@
     color: rgba(30, 6, 6, 0.05);
     margin-top: 17px;
     margin-left: 28px;
+    @media (max-width:768px) {
+  }
   }
   &__handle {
     display: flex;
@@ -105,6 +111,12 @@
     position: absolute;
     left: 448px;
     top: -89px;
+    @media (max-width:768px) {
+      height: 286px;
+      width: 385px;
+      margin-top: 176px;
+      margin-left: -102px;
+  }
   }
   &__title {
     font-family: $font-opensans;
@@ -117,6 +129,9 @@
     background: #C29974;
     padding: 11px;
     color: #FFFFFF; 
+    @media (max-width:768px) {
+  }
+  
   }
   
 }
@@ -142,6 +157,7 @@
 
 /**************************************************************************************** Каталог */
 .catalog {
+  overflow: hidden;
   &__title {
     font-family: $font-montserrat;
     font-style: normal;
@@ -150,8 +166,15 @@
     line-height: 46px;
     margin-top: 90px;
     margin-bottom: 30px;
+    @media (max-width:768px) {
+      margin-top: 60px;
+  }
   }
 }
+
+// .container-catalog {
+//   max-width: 100000px;
+// }
 
 
 .catalog__products {
@@ -160,6 +183,9 @@
   align-items: center;
   margin-left: -9px;
   margin-top: 32px;
+  @media (max-width:768px) {
+    // margin-left: 205px;
+}
   &-kids {
     display: flex;
     align-items: center;
@@ -231,6 +257,8 @@
   margin-top: 90px;
   &__info {
     display: flex;
+    @media (max-width:768px) {
+  }
   }
   &__more {
     display: flex;
@@ -296,6 +324,9 @@
     color: #1E0606;
     width: 480px;
     margin-bottom: 15px;
+    @media (max-width:768px) {
+      width: 344px;
+  }  
   }
   &__titlesecond {
     font-family: $font-opensans;
@@ -306,6 +337,9 @@
     color: #1E0606;
     width: 480px;
     margin-bottom: 26px;
+    @media (max-width:768px) {
+      width: 344px;
+  }  
   }
   &__button {
     display: block;
@@ -327,25 +361,43 @@
     color: #FFFFFF; 
     transition: 0.3s linear;
   }
+  &-img {
+    @media (max-width:768px) {
+      object-fit: cover;
+      width: 280px;
+  }
+  }  
 }
 
 
 /* Брэнды */
 
 .brands__flex {
-  display: flex;
-  justify-content: space-around;
   align-items: center;
-  margin-top: 90px;
-  &-mail {
-    margin-right: 127px;
-  }
-  &-apple {
-    margin-right: 127px;
-  }
-  &-eltex {
-    margin-right: 127px;
-  }
+  display: flex;
+  justify-content: space-between;
+  margin-top: 60px;
+//   @media (max-width:768px) {
+//     // justify-content: center;
+// }
+  
+  // &-mail {
+  //   @media (max-width:768px) {
+  //     // width: 105px;
+  //   }
+  // }
+  // &-apple {
+  //   @media (max-width:768px) {
+  //     // width: 98px;
+  //   }
+  // }
+  // &-eltex {
+  //   @media (max-width:768px) {
+  //     // width: 125px;
+  //   }
+  // }
+  // &-owox {
+  //   // margin-right: 127px;
 }
 /****************************************************************************************************** Информация и карта  */
 
@@ -357,6 +409,8 @@
     margin-bottom: 164px;
     margin-top: -8px;
     margin-left: -2px;
+    @media (max-width:768px) {
+    }
   }
   &__design {
     font-family: $font-crimsontext;
@@ -368,6 +422,9 @@
     margin-bottom: 10px;
     padding-top: 32px;
     padding-left: 33px;
+    @media (max-width:768px) {
+      margin-left: -14px;
+    }
   }
   &__text {
     font-family: $font-montserrat;
@@ -380,11 +437,22 @@
     position: absolute;
     margin-top: -22px;
     margin-left: 32px;
+    @media (max-width:768px) {
+      width: 50px;
+      font-size: 30px;
+      line-height: 37px;
+      width: 282px;
+      margin-left: 16px;
+    }
   }
   &__des {
     position: relative;
     background: #E1F0F7;
     width: 543px;
+    @media (max-width:768px) {
+      width: 314px;
+      height: 302px;
+    }
   }
   &__title {
     font-family: $font-opensans;
@@ -396,6 +464,15 @@
     width: 483px;
     margin-bottom: 20px;
     margin-left: 33px;
+    @media (max-width:768px) {
+      width: 260px;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 22px;
+      color: #1E0606;
+      margin-left: 20px;
+      
+    }
   }
 
   &__contacts {
@@ -417,12 +494,21 @@
     color: #1E0606;
     margin-top: -22px;
     margin-left: 32px;
+    @media (max-width:768px) {
+      width: 241px;
+      font-size: 30px;
+      line-height: 37px;
+      margin-left: 15px;
+    }
   }
   &__contacts-more {
     display: flex;
     flex-direction: column;
     width: 543px;
     height: 209px;
+    @media (max-width:768px) {
+      width: 314px;
+    }
   }
   &__contacts-title {
     font-family: $font-opensans;
@@ -435,6 +521,13 @@
     margin-top: 44px;
     margin-bottom: 30px;
     margin-left: 33px;
+    @media (max-width:768px) {
+      width: 265px;
+      margin-left: 11px;
+      margin-top: 35px;
+      font-size: 16px;
+      line-height: 22px;
+    }
   }
   &__input-name {
   width: 600px;
@@ -459,6 +552,9 @@
   cursor: pointer;
   margin-left: 33px;
   margin-bottom: 28px;
+  @media (max-width:768px) {
+    margin-left: 20px;
+  }
 }
 .button-info:hover {
   background: #C29974;
@@ -468,6 +564,11 @@
 
 .map {
   padding-left: 33px;
+  margin-right: 30px;
+  @media (max-width:768px) {
+    margin-left: -22px;
+    margin-right: 15px;
+  }
 }
 
 
