--- a/source/views/blocks/header.html
+++ b/source/views/blocks/header.html
@@ -1,5 +1,5 @@
-<header class="header">
-    <div class="container header">
+<header class="container">
+    <div class="header">
             <div class="header__logo-img">
                 <a href="./index.html"><img class="logo-img" src="./img/dlk.png" alt="logo" width="100" height="52"></a>
             </div>
