--- a/source/views/blocks/slider.html
+++ b/source/views/blocks/slider.html
@@ -1,5 +1,5 @@
 <div class="slider">
-    <div class="container">
+    <div class="container container-catalog">
         <div class="slider__wrapper">
             <img class="slider__img-left" src="../img/arrowleftwhite.svg" alt="arrowleft">
         <ul class="slider__list">
