--- a/source/scss/_base.scss
+++ b/source/scss/_base.scss
@@ -17,9 +17,9 @@ a {
 .container {
   max-width: 1180px;
   margin: 0 auto;
-  @media (max-width: 1180px) {
-    padding: 20px;
-  }
+  // @media (max-width: 375px) {
+  //   padding: 0 10px;
+  // }
 }
 
 li {
