--- a/source/scss/_blocks/svg.scss
+++ b/source/scss/_blocks/svg.scss
@@ -1,4 +1,6 @@
 .pages__svg {
+    position: relative;
+    margin-top: -21px;
     &-main {
         font-family: $font-montserrat;
         font-style: normal;
@@ -11,12 +13,10 @@
         height: 44px;
         margin-top: 61px;
         margin-bottom: 8px;
-        margin-left: 110px;
     }
     &-text {
         display: flex;
         align-items: center;
-        margin-left: 110px;
         margin-bottom: 50px;
     }
     &-item {
@@ -44,7 +44,7 @@
 .svg {
     display: flex;
     flex-direction: column;
-    margin-left: 338px;
+    margin-left: 363px;
     margin-bottom: 60px;
     overflow: hidden;
 
@@ -57,150 +57,150 @@
 
     &__rectone {
         position: absolute;
-        left: 19.4%;
-        top: 31.1%;
+        left: 20.2%;
+        top: 32.2%;
         animation: opacity 2s ease-in-out;  
 
     }
     &__lineblue {
         position: absolute;
-        top: 33%;
-        left: 20%;
+        top: 36%;
+        left: 20.4%;
         animation: line 1s ease-in-out;
     }
 
     &__linegreen {
         position: absolute;
-        top: 36%;
-        left: 20.7%;
+        top: 42%;
+        left: 21.1%;
         animation: line 1s ease-in-out;
     }
     &__linered-s {
         position: absolute;
-        top: 39%;
-        left: 21.7%;
+        top: 47%;
+        left: 21.8%;
         animation: line 1s ease-in-out;
     }
     &__linered-b {
         position: absolute;
-        top: 39%;
+        top: 47%;
         left: 24.8%;
         animation: line 1s ease-in-out;
     }
     &__lineyellow {
         position: absolute;
-        top: 42%;
-        left: 22.8%;
+        top: 53%;
+        left: 22.6%;
         animation: line 2s ease-in-out;
     }
     &__linegray {
         position: absolute;
-        top: 44.8%;
+        top: 58.4%;
         left: 22.4%;
         animation: line 2s ease-in-out;
     }
     &__linegray-a {
         position: absolute;
-        top: 47.5%;
+        top: 64%;
         left: 22.4%;
         animation: line 2s ease-in-out;
     }
     &__linegray-b {
         position: absolute;
-        top: 47.5%;
+        top: 64%;
         left: 25.1%;
         animation: line 2s ease-in-out;
     }
     &__linegray-s {
         position: absolute;
-        top: 50%;
+        top: 69.8%;
         left: 22.6%;
         animation: line 2s ease-in-out;
     }
     &__lineyellow-a {
         position: absolute;
-        top: 53%;
-        left: 22.4%;
+        top: 75%;
+        left: 22.5%;
         animation: line 2s ease-in-out;
     }
     &__linered-d {
         position: absolute;
-        top: 56%;
-        left: 22%; 
+        top: 81%;
+        left: 21.9%;
         animation: line 2s ease-in-out;
     }
     &__linegreen-two {
         position: absolute;
-        top: 58.5%;
+        top: 87%;
         left: 21%; 
         animation: line 2s ease-in-out;
     }
     &__lineblue-two {
         position: absolute;
-        top: 61%;
-        left: 20.2%;  
+        top: 92%;
+        left: 20.4%;
         animation: line 2s ease-in-out;
     }
     &__linebeckground {
         position: absolute;
-        left: 29.5%;
-        top: 31.1%;
+        left: 30%;
+        top: 32.2%;
         animation: opacity 2s ease-in-out;  
     }
     &__backblue {
         position: absolute;
-        left: 29.5%;
-        top: 33.1%;
+        left: 30%;
+        top: 36.1%;
         animation: line-one 2s ease-in-out;  
     }
     &__rock {
         position: absolute;
-        left: 32%;
-        top: 37.9%; 
+        left: 32.4%;
+        top: 45.6%;
         z-index: 1;
         animation: line-one 2s ease-in-out;  
     }
     &__roc-t {
         position: absolute;
-        left: 30%;
-        top: 39.9%; 
+        left: 30.4%;
+        top: 49.8%;
         z-index: 0;
         animation: line-one 2s ease-in-out;  
     }
     &__backblue-t {
         position: absolute;
         left: 30.5%;
-        top: 48.1%;
+        top: 65.4%;
         animation: line-one 2s ease-in-out; 
     }
     &__rock-s {
         position: absolute;
-        left: 32.5%;
-        top: 52.9%; 
+        left: 32.9%;
+        top: 75%;
         animation: line-one 2s ease-in-out; 
     }
     &__rock-j {
         position: absolute;
         left: 34.5%;
-        top: 51.6%;  
+        top: 72.3%;
         animation: line-one 2s ease-in-out; 
     }
     &__sun {
         position: absolute;
-        left: 31.5%;
-        top: 49.6%;  
+        left: 31.7%;
+        top: 68.5%;
         animation: line-one 2s ease-in-out; 
     }
     &__lineend-one {
         position: absolute;
         left: 30.5%;
-        top: 58.6%;  
+        top: 87%;
         animation: line-one 2s ease-in-out; 
     }
     &__lineend-two {
         position: absolute;
         left: 30.5%;
-        top: 61%;  
+        top: 92%;
         animation: line-one 2s ease-in-out; 
     }
     }
