--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -44,8 +44,19 @@
 */
 
 // 1 СТРАНИЦА
+
+.background-full {
+  background: rgba(125, 151, 218, 0.8);
+  z-index: 200;
+}
 .container-banner {
   background: #EEE4DB;
+  @media (max-width:900px) {
+    padding: 0 20px;   
+}
+@media (max-width:375px) {
+  margin-left: 0px;
+}
 }
 
 .banner {
@@ -57,6 +68,9 @@
   margin-top: 129px;
   @media (max-width:768px) {
     margin-top: 35px;
+}
+@media (max-width:375px) {
+  margin-left: 10px;
 }
 
   &__wr {
@@ -73,10 +87,33 @@
     @media (max-width:768px) {
   }
   }
+  &__wr-text {
+    font-family: $font-montserrat;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 48px;
+    line-height: 59px;
+    color: rgba(30, 6, 6, 0.05);
+    @media (max-width:768px) {
+      margin-left: -46px;
+      margin-top: -10px;
+    }
+    @media (max-width:375px) {
+      margin-left: 271px;
+      margin-top: -14px;
+    }
+  }
   &__handle {
     display: flex;
     flex-direction: column;
     padding-left: 2px;
+    @media (max-width:768px) {
+      margin-left: -47px;
+    }
+    @media (max-width:375px) {
+      margin-left: 281px;
+      margin-top: -3px;
+    }
   }
   &__handle-item {
     width: 30px;
@@ -97,6 +134,13 @@
     margin-left: 45px;
     margin-top: 89px;
     margin-bottom: 19px;
+    @media (max-width:375px) {
+      max-width: 276px;
+      font-weight: 700;
+      font-size: 36px;
+      line-height: 110%;
+      margin-left: -20px;
+    }
   }
   &__designed-text {
     font-family: $font-crimsontext;
@@ -106,16 +150,126 @@
     line-height: 26px;
     margin-left: 44px;
     padding-bottom: 20px;
+    @media (max-width:375px) {
+      margin-left: -16px;
+    }
+    
   }
   &__img {
     position: absolute;
     left: 448px;
     top: -89px;
-    @media (max-width:768px) {
-      height: 286px;
+    @media (max-width:1092px) {
+      margin-left: -23px;
+      max-width:768px;
+    }
+    @media (max-width:1066px) {
+      margin-left: -33px;
+
+      max-width: 768px;
+    }
+    @media (max-width:1062px) {
+      margin-left: -43px;
+
+      max-width: 768px;
+    }
+    @media (max-width:1062px) {
+      max-width: 668px;
+    }
+    @media (max-width:1040px) {
+      max-width: 568px;
+    }
+    @media (max-width:1042px) {
+      max-width: 500px;
+      margin-top: 97px;
+    }
+    @media (max-width:910px) {
+      max-width: 480px;
+      margin-top: 114px;
+      margin-left: -60px;
+    }
+    @media (max-width:902px) {
+      max-width: 480px;
+      margin-top: 114px;
+      margin-left: -50px;
+    }
+    @media (max-width:898px) {
+      max-width: 460px;
+      margin-top: 127px;
+      margin-left: -60px;
+    }
+    @media (max-width:876px) {
+      max-width: 460px;
+      margin-top: 127px;
+      margin-left: -66px;
+    }
+    @media (max-width:866px) {
+      max-width: 460px;
+      margin-top: 127px;
+      margin-left: -120px;
+    }
+    @media (max-width:836px) {
+      max-width: 460px;
+      margin-top: 127px;
+    }
+
+    @media (max-width:812px) {
+      max-width: 440px;
+      margin-top: 144px;
+      margin-left: -125px;
+    }
+    @media (max-width:810px) {
+      max-width: 440px;
+      margin-top: 144px;
+    }
+    @media (max-width:796px) {
+      margin-top: 183px;
       width: 385px;
-      margin-top: 176px;
-      margin-left: -102px;
+    }
+    @media (max-width:768px) {
+    margin-left: -102px;
+    margin-top: 185px;
+    width: 385px;
+  }
+  @media (max-width:768px) {
+    margin-left: -102px;
+    margin-top: 236px;
+    width: 292px;
+  }
+  @media (max-width:768px) {
+    margin-left: -130px;
+    margin-top: 236px;
+    width: 292px;
+  }
+  @media (max-width:768px) {
+    margin-left: -160px;
+    margin-top: 236px;
+    width: 292px;
+  }
+  @media (max-width:768px) {
+    margin-left: -180px;
+    margin-top: 236px;
+    width: 292px;
+  }
+  @media (max-width:768px) {
+    margin-left: -180px;
+    margin-top: 236px;
+    width: 292px;
+  }
+  @media (max-width:768px) {
+    margin-left: -180px;
+    margin-top: 236px;
+    width: 280px;
+  }
+  @media (max-width:768px) and (max-width:575px) {
+    margin-left: -180px;
+    margin-top: 259px;
+    width: 260px;
+  }
+  @media (max-width:768px) and (max-width:551px) {
+    margin-left: -363px;
+    margin-top: 267px;
+    width: 260px;
   }
   }
   &__title {
@@ -131,12 +285,17 @@
     color: #FFFFFF; 
     @media (max-width:768px) {
   }
+  @media (max-width:375px) {
+     margin-left: 0px;
+  }
   
   }
   
 }
 
-
+// .main-banner {
+//   background: #eee4db;
+// }
 
 .banner-wrap {
   display: flex;
@@ -145,6 +304,10 @@
 .banner__full {
   display: flex;
   flex-direction: column; 
+  @media (max-width:375px) {
+    margin-left: -336px;
+    margin-top: -41px;
+  }
 }
 
 .button-btn:hover {
@@ -164,17 +327,24 @@
     font-weight: 700;
     font-size: 38px;
     line-height: 46px;
-    margin-top: 90px;
+    margin-top: 31px;
     margin-bottom: 30px;
-    @media (max-width:768px) {
-      margin-top: 60px;
+    font-style: normal;
+  @media (max-width:470px) {
+    font-size: 24px;
+    line-height: 29px;
+    max-width: 333px;
+    padding: 0 20px;
+    margin-left: -29px;
   }
   }
 }
 
-// .container-catalog {
-//   max-width: 100000px;
-// }
+.container-catalog {
+  @media (max-width: 1456px) {
+    padding: 0 20px;
+}
+}
 
 
 .catalog__products {
@@ -183,8 +353,8 @@
   align-items: center;
   margin-left: -9px;
   margin-top: 32px;
-  @media (max-width:768px) {
-    // margin-left: 205px;
+  @media (max-width: 375px) {
+    margin-left: -20px;
 }
   &-kids {
     display: flex;
@@ -195,6 +365,10 @@
     margin-right: 20px; 
     width: 280px;   
     height: 270px;
+    @media (max-width:375px) {
+      max-width: 247px;
+      margin-left: 10px;
+    }
   }
   &-text {
     font-family: $font-montserrat;
@@ -255,18 +429,30 @@
 
 .delivery {
   margin-top: 90px;
+  @media (max-width:768px) {
+    margin-top: 20px;
+  }
+  @media (max-width:375px) {
+    margin-top: 20px;
+  }
   &__info {
     display: flex;
     @media (max-width:768px) {
+  }
+  @media (max-width:879px) {
+    flex-direction: column;
   }
   }
   &__more {
     display: flex;
     flex-direction: column;
-    width: 540px;
     height: 472px;
-    margin-top: 30px;
-    padding-left: 121px;
+    margin-top: 27px;
+    padding-left: 125px;
+    width: 540px;
+    @media (max-width:375px) {
+      margin-left: -129px;
+    }
   }
   &__text {
     font-family: $font-montserrat;
@@ -276,6 +462,12 @@
     line-height: 46px;
     text-transform: uppercase;
     margin-bottom: 6px;
+    @media (max-width:375px) {
+      font-style: normal;
+      font-weight: 700;
+      font-size: 24px;
+      line-height: 29px;
+    }
   }
   &__itemdel {
     display: flex;
@@ -325,7 +517,7 @@
     width: 480px;
     margin-bottom: 15px;
     @media (max-width:768px) {
-      width: 344px;
+      max-width: 344px;
   }  
   }
   &__titlesecond {
@@ -338,7 +530,7 @@
     width: 480px;
     margin-bottom: 26px;
     @media (max-width:768px) {
-      width: 344px;
+      max-width: 344px;
   }  
   }
   &__button {
@@ -366,6 +558,11 @@
       object-fit: cover;
       width: 280px;
   }
+  @media (max-width:375px) {
+    min-width: 370px;
+    margin-left: -18px;
+    padding: 0 10px;
+}
   }  
 }
 
@@ -376,28 +573,34 @@
   align-items: center;
   display: flex;
   justify-content: space-between;
-  margin-top: 60px;
-//   @media (max-width:768px) {
-//     // justify-content: center;
-// }
-  
-  // &-mail {
-  //   @media (max-width:768px) {
-  //     // width: 105px;
-  //   }
-  // }
-  // &-apple {
-  //   @media (max-width:768px) {
-  //     // width: 98px;
-  //   }
-  // }
-  // &-eltex {
-  //   @media (max-width:768px) {
-  //     // width: 125px;
-  //   }
-  // }
-  // &-owox {
-  //   // margin-right: 127px;
+  margin-top: 88px;
+  @media (max-width:555px) {
+    flex-wrap: wrap;
+    margin-top: 117px;
+}
+
+  &-mail {
+    @media (max-width:555px) {
+      order: 3;
+      margin-top: 31px;
+    }
+  }
+  &-apple {
+    @media (max-width:555px) {
+      order: 2;
+    }
+  }
+  &-eltex {
+    @media (max-width:555px) {
+      order: 1;
+    }
+  }
+  &-owox {
+    @media (max-width:555px) {
+      order: 4;
+      margin-top: 31px;
+    }
+}
 }
 /****************************************************************************************************** Информация и карта  */
 
@@ -407,9 +610,10 @@
   &__wrap {
     display: flex;
     margin-bottom: 164px;
-    margin-top: -8px;
-    margin-left: -2px;
-    @media (max-width:768px) {
+    margin-top: -11px;
+    margin-left: -43px;
+    @media (max-width:691px) {
+      flex-direction: column;
     }
   }
   &__design {
@@ -422,7 +626,7 @@
     margin-bottom: 10px;
     padding-top: 32px;
     padding-left: 33px;
-    @media (max-width:768px) {
+    @media (max-width:1171px) {
       margin-left: -14px;
     }
   }
@@ -437,7 +641,7 @@
     position: absolute;
     margin-top: -22px;
     margin-left: 32px;
-    @media (max-width:768px) {
+    @media (max-width:1171px) {
       width: 50px;
       font-size: 30px;
       line-height: 37px;
@@ -449,9 +653,18 @@
     position: relative;
     background: #E1F0F7;
     width: 543px;
-    @media (max-width:768px) {
+    @media (max-width:1171px) {
+      width: 314px;
+    }
+    @media (max-width:761px) {
       width: 314px;
       height: 302px;
+      margin-left: 32px;
+    }
+    @media (max-width:691px) {
+      width: 386px;
+      margin-left: 21px;
+      margin-bottom: 50px;
     }
   }
   &__title {
@@ -464,14 +677,16 @@
     width: 483px;
     margin-bottom: 20px;
     margin-left: 33px;
-    @media (max-width:768px) {
+    @media (max-width:1171px) {
       width: 260px;
       font-weight: 400;
       font-size: 16px;
       line-height: 22px;
       color: #1E0606;
       margin-left: 20px;
-      
+    }
+    @media (max-width:375px) {
+      width: 335px;
     }
   }
 
@@ -482,6 +697,10 @@
     margin-left: 57px;
     margin-bottom: 20px;
     background: #E1F0F7;
+    @media (max-width:691px) {
+      margin-left: 21px;
+      width: 386px;
+    }
   }
   &__contacts-text {
     position: absolute;
@@ -494,7 +713,7 @@
     color: #1E0606;
     margin-top: -22px;
     margin-left: 32px;
-    @media (max-width:768px) {
+    @media (max-width:1171px) {
       width: 241px;
       font-size: 30px;
       line-height: 37px;
@@ -506,7 +725,7 @@
     flex-direction: column;
     width: 543px;
     height: 209px;
-    @media (max-width:768px) {
+    @media (max-width:1171px) {
       width: 314px;
     }
   }
@@ -521,12 +740,16 @@
     margin-top: 44px;
     margin-bottom: 30px;
     margin-left: 33px;
-    @media (max-width:768px) {
+    @media (max-width:1171px) {
       width: 265px;
       margin-left: 11px;
       margin-top: 35px;
       font-size: 16px;
       line-height: 22px;
+    }
+    @media (max-width:375px) {
+      width: 335px;
+      padding-left: 9px;
     }
   }
   &__input-name {
@@ -552,7 +775,7 @@
   cursor: pointer;
   margin-left: 33px;
   margin-bottom: 28px;
-  @media (max-width:768px) {
+  @media (max-width:1171px) {
     margin-left: 20px;
   }
 }
@@ -565,9 +788,13 @@
 .map {
   padding-left: 33px;
   margin-right: 30px;
-  @media (max-width:768px) {
+  @media (max-width:1171px) {
     margin-left: -22px;
     margin-right: 15px;
+  }
+  @media (max-width:375px) {
+    width: 335px;
+    margin-left: 5px;
   }
 }
 
@@ -586,12 +813,25 @@
     text-transform: uppercase;
     color: #1E0606;
     margin-top: 60px;
+    @media (max-width:768px) {
+      font-weight: 700;
+      font-size: 36px;
+      line-height: 44px;
+    }
+    @media (max-width:485px) {
+      font-size: 24px;
+      line-height: 29px;
+      max-width: 287px;
+    }
   }
   &__home {
     display: flex;
     align-items: center;
     margin-top: -13px;
     margin-bottom: 104px;
+    @media (max-width:768px) {
+      // padding: 0 13px;
+    }
   }
   &__home-item {
     font-family: $font-crimsontext;
@@ -625,12 +865,22 @@
 
 
 /*********************************************************************************************KATAKLOG */
-
-
 .catalog__product {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 48px;
+  margin-top: 50px;
+  @media (max-width:1141px) {
+    display: flex;
+    padding: 0 20px;
+  }
+  @media (max-width:981px) {
+    margin: 0;
+  }
+  @media (max-width:484px) {
+    // flex-direction: column; 
+    // flex-wrap: wrap;
+  }
+
   &-kid {
     display: flex;
     align-items: center;
@@ -640,7 +890,24 @@
     margin-right: 20px; 
     width: 280px;   
     height: 270px;
+    @media (max-width:941px) {
+        max-width: 203px;
+        max-height: 196px;
+    }
+    @media (max-width:724px) {
+      max-width: 160px;
+      max-height: 154px;
   }
+  }
+  &-kidimg {
+    @media (max-width:941px) {
+      object-fit: contain;    
+}
+    @media (max-width:724px) {
+      object-fit: contain;  
+      max-width: 139px;
+}
+}
   &-text {
     font-family: $font-montserrat;
     font-style: normal;
@@ -652,6 +919,11 @@
     position: absolute;
     width: 155px;
     color: #FFFFFF; 
+    @media (max-width:724px) {  
+      font-size: 18px;
+      line-height: 22px;
+      max-width: 123px;
+}
   }
   &-text:hover {
     text-decoration: underline;
@@ -668,7 +940,27 @@
     margin-right: 20px; 
     width: 280px;   
     height: 270px;
-  }
+    @media (max-width:941px) {
+      max-width: 203px;
+      max-height: 196px;
+   }  
+   @media (max-width:724px) {
+      max-width: 159px;
+      max-height: 154px;
+}
+}
+  &-shimg {
+    @media (max-width:941px) {
+      object-fit: contain;
+      max-width: 149px;
+ }
+    @media (max-width:724px) {
+      object-fit: contain;  
+      max-width: 117px;
+      max-height: 139px;
+}
+}
+
   &-shtext {
     font-family: $font-montserrat;
     font-style: normal;
@@ -680,6 +972,11 @@
     position: absolute;
     width: 155px;
     color: #FFFFFF;
+    @media (max-width:724px) {  
+      font-size: 18px;
+      line-height: 22px;
+      max-width: 123px;
+}
   }
   &-shtext:hover {
     text-decoration: underline;
@@ -697,7 +994,30 @@
     width: 280px;
     height: 270px;
     margin-right: 62px;
+    @media (max-width:981px) {
+      margin: 0;
+    }
+    @media (max-width:941px) {
+      max-width: 203px;
+      max-height: 196px;
+      margin-right: 35px;
+   }  
+    @media (max-width:724px) {
+      max-width: 160px;
+      max-height: 154px;
+}
+    @media (max-width:593px) {
+      // margin-top: 15px;
+}
   }
+  &-toyimg {
+    @media (max-width:941px) {
+      object-fit: contain;
+ }
+     @media (max-width:724px) {
+      object-fit: contain;  
+}
+}
   &-toytext {
     font-family: $font-montserrat;
     font-style: normal;
@@ -709,6 +1029,11 @@
     position: absolute;
     width: 155px;
     color: #FFFFFF;
+    @media (max-width:724px) {  
+      font-size: 18px;
+      line-height: 22px;
+      max-width: 123px;
+}
   }
   &-toytext:hover {
     text-decoration: underline;
@@ -732,6 +1057,12 @@
     width: 155px;
     color: #FFFFFF;
     margin-right: 40px;
+    @media (max-width:724px) {  
+      font-size: 18px;
+      line-height: 22px;
+      max-width: 123px;
+      padding-left: 18px;
+}
   }
   &-access {
     display: flex;
@@ -744,7 +1075,36 @@
     height: 270px;
     margin-top: 25px;
     margin-left: 202px;
+    @media (max-width:1141px) {
+      margin-left: 0;
+      margin-top: 20px;
+    }
+    @media (max-width:941px) {
+      max-width: 203px;
+      max-height: 196px;
+      // margin-left: 30px;
+   }
+    @media (max-width:724px) {
+      max-width: 159px;
+      max-height: 154px;
+}   
+    @media (max-width:593px) {
+      // margin-left: -15px;
+}
+
   }
+  &-accessimg {
+    @media (max-width:941px) {
+      object-fit: contain;
+      max-width: 179px;
+      max-height: 183px;    
+ }
+    @media (max-width:724px) {
+      object-fit: contain;  
+      max-width: 137px;
+      max-height: 144px;
+}
+}
   &-accesstext:hover {
     text-decoration: underline;
   }
@@ -761,7 +1121,33 @@
     width: 280px;
     height: 270px;
     margin-top: 24px;
+    @media (max-width:1103px) {
+      margin-top: 20px;
+    }
+    @media (max-width:941px) {
+      max-width: 203px;
+      max-height: 196px;
+   }
+    @media (max-width:724px) {
+      max-width: 160px;
+      max-height: 155px;
+} 
+@media (max-width:593px) {
+  // margin-left: 15px;
+}
   }
+  &-birdimg {
+    @media (max-width:941px) {
+      object-fit: contain;
+      max-width: 181px;
+      max-height: 181px;
+ }
+    @media (max-width:724px) {
+      object-fit: contain;  
+      max-width: 143px;
+      max-height: 143px;
+}
+}
   &-birdtext {
     font-family: $font-montserrat;
     font-style: normal;
@@ -773,6 +1159,12 @@
     position: absolute;
     width: 155px;
     color: #FFFFFF;
+    @media (max-width:724px) {  
+      font-size: 18px;
+      line-height: 22px;
+      max-width: 123px;
+      padding-left: 12px;
+}
   }
   &-birdtext:hover {
     text-decoration: underline;
@@ -791,7 +1183,30 @@
     height: 270px;
     margin-top: 24px;
     margin-right: 20px;
+    @media (max-width:1103px) {
+      margin-top: 20px;
+    }
+    @media (max-width:941px) {
+      max-width: 203px;
+      max-height: 196px;
+   } 
+    @media (max-width:724px) {
+     max-width: 159px;
+     max-height: 155px;
+} 
   }
+  &-rabbitimg {
+    @media (max-width:941px) {
+      object-fit: contain;
+      max-width: 198px;
+      max-height: 149px;   
+ }
+    @media (max-width:724px) {
+      object-fit: contain;  
+      max-width: 156px;
+      max-height: 118px;
+}
+}
   &-rabbittext {
     font-family: $font-montserrat;
     font-style: normal;
@@ -804,6 +1219,11 @@
     padding-right: 9px;
     width: 155px;
     color: #FFFFFF;
+    @media (max-width:724px) {  
+      font-size: 18px;
+      line-height: 22px;
+      max-width: 123px;
+}
   }
   &-rabbittext:hover {
     text-decoration: underline;
@@ -811,11 +1231,14 @@
   &-rabbittext:active {
     text-decoration: underline;
   }
-  
 }
+
 
 /****************************************************************************************** PRODUCT */
 .description {
+  @media (max-width:1141px) {
+    margin-left: -186px;
+  }
   &__producttitle {
     font-family: $font-montserrat;
     font-style: normal;
@@ -826,6 +1249,11 @@
     color: #1E0606;
     margin-top: 56px;
     margin-left: 201px;
+    @media (max-width:768px) {
+      font-weight: 700;
+      font-size: 36px;
+      line-height: 44px;
+    }
   }
   &__producttext {
     font-family: $font-opensans;
@@ -837,6 +1265,9 @@
     color: #1E0606;
     margin-left: 201px;
     margin-top: 24px;
+    @media (max-width:768px) {
+      width: 608px;
+    }
   }
   &__productdesc {
     font-family: $font-opensans;
@@ -848,6 +1279,9 @@
     color: #1E0606;
     margin-left: 201px;
     margin-top: 16px;
+    @media (max-width:768px) {
+      width: 608px;
+    }
   }
   &__productslogan {
     font-family: $font-opensans;
@@ -860,6 +1294,9 @@
     margin-left: 201px;
     margin-top: 15px;
     margin-bottom: 51px;
+    @media (max-width:768px) {
+      width: 608px;
+    }
   }
 }
 
@@ -2142,6 +2579,10 @@ background: url('../img/radius.svg') 0 0 no-repeat;
   height: 15px;
   left: 68.8%;
   top: 15.7%;
+  @media (max-width:768px) {
+    margin-left: -116px;
+    margin-top: -9px;
+}
  }
  
  .button__close:hover {
