--- a/source/views/blocks/header.html
+++ b/source/views/blocks/header.html
@@ -1,7 +1,30 @@
 <header class="container">
     <div class="header">
+        <div class="wrapper__menu">
+            <input class="wrapper__checkmenu" type="checkbox" id="check-menu">
+            <label class="wrapper__checklabel" for="check-menu">MENU</label>
+            <div class="wrapper__burder-line"></div>
+            <div class="wrapper__burder-line"></div>
+            <div class="wrapper__burder-line"></div>
+            <div class="wrapper__burder-line"></div>
+            <nav class="wrapper__main-menu">
+                <a href="#" class="wrapper__menu-item">CATALOG</a>
+                <a href="#" class="wrapper__menu-item">ABOUT US</a>
+                <a href="#" class="wrapper__menu-item">BLOG</a>
+                <a href="#" class="wrapper__menu-item">ANIMATION</a>
+                <a href="#" class="wrapper__menu-item">SVG</a>
+                <a href="#" class="wrapper__menu-item">GRID</a>
+                <a href="#" class="wrapper__menu-item">CONTACT US</a>                    
+            </nav>
+           </div>
             <div class="header__logo-img">
-                <a href="./index.html"><img class="logo-img" src="./img/dlk.png" alt="logo" width="100" height="52"></a>
+                <!-- <a href="./index.html"><img class="logo-img" src="./img/dlk.png" alt="logo" width="100" height="52"></a> -->
+                <picture>
+                    <source class="header__logo-img" srcset="./img/image/dlk.png" type="image/png" max-width="100" max-height="52" media="(min-width:768px)"> 
+                    <source class="header__logo-img" srcset="./img/image/dlk42x22.png" type="image/png" media="(min-width:376px)">
+                    <source class="header__logo-img" srcset="./img/image/dlk62x32.png" type="image/png" media="(max-width:375px)">
+                    <a href="./index.html"><img class="header__logo-img" src="./img/image/dlk.png" alt="dlk"></a>
+                  </picture>
             </div>
             <ul class="header__list">
                 <li><a href="blog.html" class="header__list-item">BLOG</a></li>
@@ -9,12 +32,11 @@
                 <li><a href="#" class="header__list-item">ABOUT US</a></li>
                 <li><a href="animation.html" class="header__list-item">ANIMATION</a></li>
                 <li><a href="svg.html" class="header__list-item">SVG</a></li>
-                <li><a href="" class="header__list-item">GRID</a></li>
+                <li><a href="#" class="header__list-item">GRID</a></li>
                </ul>
-               <div class="menu">MENU</div>
             <ul class="header__contact">
                 <li><img class="header__contact-img" src="./img/loupe.svg" alt="contact" width="17" height="17"></li>
                 <li><a href="contactus.html" class="header__text">CONTACT US</a></li>
-               </ul>
+               </ul>               
     </div>
 </header>
