--- a/source/scss/_blocks/header.scss
+++ b/source/scss/_blocks/header.scss
@@ -190,9 +190,10 @@
     @media (max-width:768px) and (max-width:395px) {
         max-width: 395px;
     }
-    // @media (max-width:768px) and (max-width:379px) {
-    //     max-width: 379px;
-    // }
+    @media (max-width:768px) and (max-width:375px) {
+        max-width: 391px;
+    }
+
     
 }
 
