--- a/source/scss/_blocks/help.scss
+++ b/source/scss/_blocks/help.scss
@@ -1,8 +1,11 @@
 .help__you {
     display: flex;
     flex-direction: column;
-    margin-left: 121px;
+    // margin-left: 121px;
     margin-top: -4px;
+    @media (max-width:768px) {
+        align-items: center;
+      }
     &-items {
         font-family: $font-opensans;
         font-style: normal;
@@ -10,8 +13,12 @@
         font-size: 16px;
         line-height: 22px;
         color: #1E0606;
-        width: 380px;
+        max-width: 380px;
         margin-bottom: 20px;
+            @media (max-width:768px) {
+                max-width: 536px;
+                text-align: center;
+            }
     }
     &-item {
         font-family: $font-opensans;
@@ -20,8 +27,12 @@
         font-size: 16px;
         line-height: 22px;
         color: #1E0606;
-        width: 380px;
+        max-width: 380px;
         margin-bottom: 20px;
+        @media (max-width:768px) {
+            max-width: 536px;
+            text-align: center;
+          }
     }
     &-it {
         font-family: $font-montserrat;
@@ -31,7 +42,12 @@
         line-height: 34px;
         text-transform: uppercase;
         color: #C29974;
-        width: 380px;
+        max-width: 380px;
+        @media (max-width:768px) {
+            max-width: 536px;
+            text-align: center;
+            margin-bottom: 45px;
+          }
     }
 }
 
