--- a/source/scss/_variables.base.scss
+++ b/source/scss/_variables.base.scss
@@ -17,6 +17,7 @@ $font-montserrat: "Montserrat", sans-serif;
 $font-crimsontext: "Crimson Text";
 $font-opensans: "Open Sans", sans-serif;
 $font-roboto: "Roboto", sans-serif;
+$font-lato: "Lato", sans-serif;
 
 
 
