--- a/source/scss/_blocks/animation.scss
+++ b/source/scss/_blocks/animation.scss
@@ -1,7 +1,7 @@
 
 .page__animation {
     position: relative;
-    width: 1400px;
+    max-width: 1400px;
     margin: 0 auto;
     overflow: hidden;
     &-main {
@@ -17,11 +17,17 @@
         margin-top: 61px;
         margin-bottom: 8px;
         margin-left: 110px;
+        @media (max-width:1395px) {
+            margin-left: 14px;
+          }  
     }
     &-text {
         display: flex;
         align-items: center;
         margin-left: 110px;
+        @media (max-width:1395px) {
+            margin-left: 14px;
+          }  
     }
     &-item {
         font-family: "Crimson Text";
@@ -49,40 +55,99 @@
         left: 13%;
         top: 70%;
         animation: animation-carone 8s ease infinite; 
+        @media (max-width:900px) {
+            object-fit: contain;
+            max-width: 368px;
+            max-height: 73px;
+            margin-top: -79px;
+            transform: translateX(-143px);
+          } 
+          @media (max-width:630px) {
+            max-height: 56px;
+          } 
     }
     &-cartwo {
         position: absolute;
         left: 33%;
         top: 70%;
         animation: animation-carone 8s ease infinite; 
+        @media (max-width:900px) {
+            object-fit: contain;
+            max-width: 368px;
+            max-height: 73px;
+            margin-top: -79px;
+            transform: translateX(-143px);
+          } 
+          @media (max-width:630px) {
+            max-height: 56px;
+          }
     }
     &-carthree {
         position: absolute;
         left: 48%;
         top: 72%;
         animation: animation-carone 8s ease infinite; 
+        @media (max-width:900px) {
+            object-fit: contain;
+            max-width: 368px;
+            max-height: 73px;
+            margin-top: -89px;
+            transform: translateX(-89px);
+          } 
+          @media (max-width:630px) {
+            max-height: 56px;
+          }
     }   
     &-carfour {
         position: absolute;
         left: 73.2%;
         top: 67%;
         animation: animation-carone 8s ease infinite; 
+        @media (max-width:900px) {
+            object-fit: contain;
+            max-width: 368px;
+            max-height: 73px;
+            margin-top: -59px;
+            transform: translateX(-133px)
+          } 
+          @media (max-width:630px) {
+            max-height: 56px;
+          }
     }
     &-lampone {
         position: absolute;
         left: 38.2%;
         top: 42%; 
+        @media (max-width:900px) {
+            object-fit: contain;
+            width: 102px;
+            margin-top: -16px;
+          } 
     }
     &-lamptwo {
         position: absolute;
         left: 78.8%;
         top: 41%;
+        @media (max-width:900px) {
+            object-fit: contain;
+            width: 102px;
+            margin-top: -38px;
+          } 
     }
     &-lampactive {
         position: absolute;
         left: 68.8%;
         top: 40%;
         z-index: 2;
+        @media (max-width:900px) {
+            object-fit: contain;
+            width: 135px;
+            margin-top: 40px;
+          } 
+          @media (max-width:630px) {
+            width: 112px;
+            margin-top: 62px;
+          } 
     }
     &-taxi {
         position: absolute;
@@ -91,6 +156,16 @@
         z-index: 1;
         // transform: translateY(350px);
         animation: animation-taxi 8s ease-in-out infinite;
+        @media (max-width:900px) {
+            object-fit: contain;
+            width: 600px;
+            margin-top: -50px;
+            animation: animation-taxi 8s ease-in-out infinite;
+            transform: translateX(650px);
+          } 
+          @media (max-width:630px) {
+            max-width: 500px;
+          } 
     }
     &-taxitext {
         position: absolute;
@@ -98,26 +173,74 @@
         top: 62.4%;
         z-index: 3;
         animation: animation-taxitex 8s ease-in-out infinite;
+        @media (max-width:900px) {
+            object-fit: contain;
+            max-width: 130px;
+            max-height: 84px;
+            margin-top: -8px;
+            left: 59%;
+            right: 7%;
+          }  
+          @media (max-width:630px) {
+            left: 50%;
+            margin-top: -33px;
+          }  
     }
     &-woman {
         position: absolute;
         left: 22.8%;
-        top: 73.3%;
+        top: 71.3%;
         width: 211px;
         height: 283px;
         z-index: 1;
+        @media (max-width:900px) {
+            object-fit: contain;
+            width: 160px;
+            z-index: 1;
+            margin-top: 29px;
+          }  
+          @media (max-width:630px) {
+            width: 141px;
+            margin-top: 42px;
+          }  
     }
     &-womantext {
         position: absolute;
         left: 19%;
         top: 62.4%; 
-        animation: woman-text 8s ease-in-out infinite;
+        animation: woman-text 8s ease-in-out infinite; 
+        @media (max-width:900px) {
+            object-fit: contain;
+            max-width: 177px;
+            max-height: 70px;
+            margin-top: 56px;
+            left: 13%;
+          }  
+          @media (max-width:630px) {
+            margin-top: 88px;
+          }  
+          @media (max-width:435px) {
+            left: 7%;
+          }  
     }
     &-men {
         position: absolute;
         left: 29.8%;
-        top: 62%;
+        top: 61%;
         z-index: 1;
+        @media (max-width:900px) {
+            object-fit: contain;
+            width: 160px;
+            margin-top: 51px;
+            left: 34%;
+            z-index: 1;
+          }
+        @media (max-width:630px) {
+            width: 140px;
+            margin-top: 67px;
+            left: 39%;
+          }     
+          
     }
     &-mentext {
         position: absolute;
@@ -125,6 +248,16 @@
         top: 54.4%; 
         z-index: 4;
         animation: men-text 8s ease-in-out infinite;
+        @media (max-width:900px) {
+            object-fit: contain;
+            max-width: 130px;
+            max-height: 70px;
+            margin-top: 87px;
+          }  
+          @media (max-width:900px) {
+            margin-top: 121px;
+            left: 35%;
+          } 
     }
     &-arm {
         position: absolute;
@@ -132,6 +265,15 @@
         top: 74%;
         z-index: 1;
         animation: arm-one 8s ease-in-out infinite;
+        @media (max-width:900px) {
+            object-fit: contain;
+            width: 35px;
+            margin-top: 54px;
+            left: 33%;
+          }  
+          @media (max-width:900px) {
+            left: 37%;
+          } 
     }
     &-armtwo {
         position: absolute;
@@ -139,6 +281,16 @@
         top: 64%;
         z-index: 1;
         animation: arm-two 8s ease-in-out infinite;
+        @media (max-width:900px) {
+            object-fit: contain;
+            width: 113px;
+            margin-top: 40px;
+            left: 35%;
+          }  
+          @media (max-width:900px) {
+            width: 157px;
+            margin-top: 82px;
+          } 
     }
 }
 
