--- a/source/scss/_blocks/popup.scss
+++ b/source/scss/_blocks/popup.scss
@@ -1,11 +1,14 @@
 .section-form {
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   left: 0;
   bottom: 0;
   display: none;
   background-color: rgba(125, 151, 218, 0.8);
+  height: 3000px;
+  width: 100%;
+  z-index: 100;
  }
 
  .container-form {
@@ -14,6 +17,14 @@
  }
  .form-block {
   margin-top: 150px;
+  max-width: 680px;
+  width: 100%;
+  display: flex;
+  gap: 10px;
+  @media (max-width:768px) {
+   display: flex;
+   flex-direction: column;
+ }
  }
  .open {
    display: block;
@@ -21,18 +32,8 @@
 
  .popup__form {
   background-color: #7D97DA;
-  width: 680px;
   padding: 40px 42px;
   background: #E5EAF8;
-  @media (max-width:768px) {
-   margin-left: -429px;
-   margin-top: -28px;
-   }
-   @media (max-width:375px) {
-   width: 335px;
-   padding: 25px;
-   margin-left: -615px;
-}
 
   &-namestyle {
    font-family: $font-roboto;
@@ -43,12 +44,10 @@
    color: #1E0606;
   }
   &-inputname {
-   width: 600px;
+   max-width: 600px;
+   width: 100%;
    height: 50px;
    margin-bottom: 5px;
-   @media (max-width:375px) {
-      width: 285px;
-   }
   }
   &-inputname:hover {
    border: 1px solid #C29974;
@@ -58,7 +57,7 @@
    justify-content: space-between;
    @media (max-width:375px) {
       flex-direction: column;
-   }
+    }
   }
   &-tel {
    margin-right: 10px;
@@ -72,7 +71,8 @@
    color: #1E0606;
   }
   &-inputtel {
-   width: 290px;
+   max-width: 290px;
+   width: 100%;
    height: 50px;
   }
   &-inputtel:hover {
@@ -80,6 +80,9 @@
   }
   &-email {
    margin-left: 10px;
+   @media (max-width:375px) {
+      margin-left: 0;
+    }
   }
   &-labelemail {
    font-family: $font-roboto;
@@ -88,16 +91,11 @@
    font-size: 14px;
    line-height: 16px;
    color: #1E0606;
-   @media (max-width:375px) {
-      margin-left: -10px;
-   }
   }
   &-inputemail {
-   width: 290px;
+   max-width: 290px;
+   width: 100%;
    height: 50px;
-   @media (max-width:375px) {
-      margin-left: -10px;
-   }
   }
   &-inputemail:hover {
    border: 1px solid #C29974;
@@ -122,9 +120,6 @@
    color: #1E0606;
    padding: 14px 0 11px 20px;
    margin-bottom: 20px;
-   @media (max-width:375px) {
-      width: 285px;
-   }
   }
   &-textarea:hover {
    border: 1px solid #C29974;
