--- a/source/scss/_blocks/svg.scss
+++ b/source/scss/_blocks/svg.scss
@@ -20,7 +20,7 @@
         margin-bottom: 50px;
     }
     &-item {
-        font-family: "Crimson Text";
+        font-family: $font-crimsontext;
         font-style: italic;
         font-weight: 400;
         font-size: 20px;
@@ -57,8 +57,8 @@
 
     &__rectone {
         position: absolute;
-        left: 20.2%;
-        top: 32.2%;
+        left: 20%;
+        top: 32.3%;
         animation: opacity 2s ease-in-out;  
 
     }
@@ -143,8 +143,8 @@
     }
     &__linebeckground {
         position: absolute;
-        left: 30%;
-        top: 32.2%;
+        left: 29.8%;
+        top: 32.3%;
         animation: opacity 2s ease-in-out;  
     }
     &__backblue {
