--- a/source/scss/_blocks/grid.scss
+++ b/source/scss/_blocks/grid.scss
@@ -466,7 +466,7 @@
         text-align: center;
         color: #FFFFFF;
         display: inline-flex;
-        justify-content: end;
+        justify-content: start;
         background: #FA684F;
         border-radius: 3px;
         padding: 3px 5px;
