--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -271,7 +271,7 @@
       transform: translate(-356px,125px);
     }
     @media (max-width:408px) {
-      transform: translate(-387px,125px);
+      transform: translate(-396px,125px);
     }
   }
   &__title {
@@ -342,12 +342,13 @@
     margin-top: 31px;
     margin-bottom: 30px;
     font-style: normal;
+    margin-left: -22px;
   @media (max-width:470px) {
     font-size: 24px;
     line-height: 29px;
     max-width: 333px;
     padding: 0 20px;
-    margin-left: -29px;
+    margin-left: -22px;
   }
   }
 }
@@ -490,6 +491,7 @@
       font-weight: 700;
       font-size: 24px;
       line-height: 29px;
+      margin-left: -38px;
     }
   }
   &__itemdel {
@@ -543,6 +545,9 @@
     @media (max-width:768px) {
       max-width: 344px;
   }  
+    @media (max-width:500px) {
+      margin-left: -29px; 
+}  
   }
   &__titlesecond {
     font-family: $font-opensans;
@@ -556,7 +561,10 @@
     margin-bottom: 26px;
     @media (max-width:768px) {
       max-width: 344px;
-  }  
+  } 
+    @media (max-width:500px) {
+      margin-left: -29px; 
+}  
   }
   &__button {
     background: #000;
@@ -571,8 +579,10 @@
     text-align: center;
     text-transform: uppercase;
     max-width: 149px;
-    margin-left: 32px;
-    
+    margin-left: 32px;  
+    @media (max-width:500px) {
+      margin-left: 7px; 
+} 
   }
   &__button:hover {
     background: #C29974;
@@ -586,7 +596,7 @@
   }
   @media (max-width:375px) {
     min-width: 370px;
-    margin-left: -18px;
+    margin-left: -12px;
     padding: 0 10px;
 }
   }  
@@ -633,9 +643,6 @@
 .info {
   display: flex;
   margin-top: 122px;
-  @media (max-width:1027px) {
-    // margin-left: -157px;
-  }
   &__wrap {
     display: flex;
     margin-bottom: 164px;
@@ -647,7 +654,7 @@
     @media (max-width:887px) {
       padding: 0 0 0 44px;
      }
-    @media (max-width:691px) {
+    @media (max-width:650px) {
       flex-direction: column;
     }
   }
@@ -661,9 +668,6 @@
     margin-bottom: 10px;
     padding-top: 32px;
     padding-left: 33px;
-    @media (max-width:1171px) {
-      margin-left: -14px;
-    }
   }
   &__text {
     font-family: $font-montserrat;
@@ -673,34 +677,22 @@
     line-height: 46px;
     text-transform: uppercase;
     color: #1E0606;
-    position: absolute;
+    position: relative;
     margin-top: -22px;
     margin-left: 32px;
-    @media (max-width:1171px) {
-      width: 50px;
+    @media (max-width:842px) {
       font-size: 30px;
       line-height: 37px;
-      width: 282px;
-      margin-left: 16px;
+    }
+    @media (max-width:704px) {
+      font-size: 24px;
+      line-height: 29px;
     }
   }
   &__des {
     position: relative;
     background: #E1F0F7;
-    width: 543px;
-    @media (max-width:887px) {
-      width: 314px;
-    }
-    @media (max-width:761px) {
-      width: 314px;
-      height: 302px;
-      margin-left: 32px;
-    }
-    @media (max-width:691px) {
-      width: 386px;
-      margin-left: 21px;
-      margin-bottom: 50px;
-    }
+    max-width: 543px;
   }
   &__title {
     font-family: $font-opensans;
@@ -709,20 +701,9 @@
     font-size: 16px;
     line-height: 22px;
     color: #1E0606;
-    width: 483px;
+    max-width: 483px;
     margin-bottom: 20px;
     margin-left: 33px;
-    @media (max-width:1171px) {
-      width: 260px;
-      font-weight: 400;
-      font-size: 16px;
-      line-height: 22px;
-      color: #1E0606;
-      margin-left: 20px;
-    }
-    @media (max-width:375px) {
-      width: 335px;
-    }
   }
 
   &__contacts {
@@ -732,13 +713,13 @@
     margin-left: 57px;
     margin-bottom: 20px;
     background: #E1F0F7;
-    @media (max-width:691px) {
-      margin-left: 21px;
-      width: 386px;
+    @media (max-width:650px) {
+      margin-left: 0;
+      margin-top: 50px;
     }
   }
   &__contacts-text {
-    position: absolute;
+    position: relative;
     font-family: $font-montserrat;
     font-style: normal;
     font-weight: 700;
@@ -748,21 +729,20 @@
     color: #1E0606;
     margin-top: -22px;
     margin-left: 32px;
-    @media (max-width:1171px) {
-      width: 241px;
+    @media (max-width:842px) {
       font-size: 30px;
       line-height: 37px;
-      margin-left: 15px;
+    }
+    @media (max-width:704px) {
+      font-size: 24px;
+      line-height: 29px;
     }
   }
   &__contacts-more {
     display: flex;
     flex-direction: column;
-    width: 543px;
+    max-width: 543px;
     height: 209px;
-    @media (max-width:887px) {
-      width: 314px;
-    }
   }
   &__contacts-title {
     font-family: $font-opensans;
@@ -771,20 +751,20 @@
     font-size: 16px;
     line-height: 22px;
     color: #1E0606;
-    width: 483px;
+    max-width: 483px;
     margin-top: 44px;
     margin-bottom: 30px;
     margin-left: 33px;
     @media (max-width:1171px) {
-      width: 265px;
-      margin-left: 11px;
-      margin-top: 35px;
-      font-size: 16px;
-      line-height: 22px;
+      // width: 265px;
+      // margin-left: 11px;
+      // margin-top: 35px;
+      // font-size: 16px;
+      // line-height: 22px;
     }
     @media (max-width:375px) {
-      width: 335px;
-      padding-left: 9px;
+      // width: 335px;
+      // padding-left: 9px;
     }
   }
   &__input-name {
@@ -823,14 +803,9 @@
 .map {
   padding-left: 33px;
   margin-right: 30px;
-  @media (max-width:1171px) {
-    margin-left: -22px;
-    margin-right: 15px;
-  }
-  @media (max-width:375px) {
-    width: 335px;
-    margin-left: 5px;
-  }
+}
+.map-content {
+  width: 100%;
 }
 
 
@@ -1766,7 +1741,7 @@ background: url('../img/radius.svg') 0 0 no-repeat;
     background-color:  #C29974;;
     border-radius: 50%;
     opacity: 0;
-    margin-left: -2px;
+    margin-left: -2.5px;
     position: absolute;
     top: 3px;
     left: 3px;
