--- a/source/views/blocks/header.html
+++ b/source/views/blocks/header.html
@@ -8,13 +8,13 @@
             <div class="wrapper__burder-line"></div>
             <div class="wrapper__burder-line"></div>
             <nav class="wrapper__main-menu">
-                <a href="#" class="wrapper__menu-item">CATALOG</a>
+                <a href="catalog.html" class="wrapper__menu-item">CATALOG</a>
                 <a href="#" class="wrapper__menu-item">ABOUT US</a>
-                <a href="#" class="wrapper__menu-item">BLOG</a>
-                <a href="#" class="wrapper__menu-item">ANIMATION</a>
-                <a href="#" class="wrapper__menu-item">SVG</a>
-                <a href="#" class="wrapper__menu-item">GRID</a>
-                <a href="#" class="wrapper__menu-item">CONTACT US</a>                    
+                <a href="blog.html" class="wrapper__menu-item">BLOG</a>
+                <a href="animation.html" class="wrapper__menu-item">ANIMATION</a>
+                <a href="svg.html" class="wrapper__menu-item">SVG</a>
+                <a href="grid.html" class="wrapper__menu-item">GRID</a>
+                <a href="contactus.html" class="wrapper__menu-item">CONTACT US</a>                    
             </nav>
            </div>
             <div class="header__logo-img">
@@ -23,7 +23,7 @@
                     <source class="header__logo-img" srcset="./img/image/dlk.png" type="image/png" max-width="100" max-height="52" media="(min-width:768px)"> 
                     <source class="header__logo-img" srcset="./img/image/dlk42x22.png" type="image/png" media="(min-width:376px)">
                     <source class="header__logo-img" srcset="./img/image/dlk62x32.png" type="image/png" media="(max-width:375px)">
-                    <a href="./index.html"><img class="header__logo-img" src="./img/image/dlk.png" alt="dlk"></a>
+                    <a href="./index.html"><img class="header__logo-img" src="./img/image/dlk.png" alt="dlk-logo"></a>
                   </picture>
             </div>
             <ul class="header__list">
