--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -494,6 +494,9 @@
       margin-left: -38px;
     }
   }
+  &__list {
+    margin-left: 38px;
+  }
   &__itemdel {
     display: flex;
     align-items: center;
