--- a/source/views/blocks/slider.html
+++ b/source/views/blocks/slider.html
@@ -1,14 +1,14 @@
 <div class="slider">
     <div class="container container-catalog">
         <div class="slider__wrapper">
-            <img class="slider__img-left" src="../img/arrowleftwhite.svg" alt="arrowleft">
+            <img class="slider__img-left" src="./img/arrowleftwhite.svg" alt="arrowleft">
         <ul class="slider__list">
             <li class="slider__list-item">1</li>
             <li class="slider__list-item">2</li>
             <li class="slider__list-item">3</li>
             <li class="slider__list-item">4</li>    
         </ul>
-        <img class="slider__img-rigth" src="../img/arrowrightwhite.svg" alt="arrowright">
+        <img class="slider__img-rigth" src="./img/arrowrightwhite.svg" alt="arrowright">
         </div>
     </div>
     </div>
